--- a/index.html
+++ b/index.html
@@ -744,24 +744,27 @@
   margin-bottom: 2rem;
 }
 
-.paper-title-simple {
-  font-weight: bold;
-  margin-bottom: 0.3rem;
-}
-
-.paper-authors-simple {
-  font-style: italic;
-  margin-bottom: 0.3rem;
-}
-
-.paper-journal-simple {
-  margin-bottom: 0.3rem;
-}
-
-.paper-status-simple {
-  font-style: italic;
-  margin-bottom: 0.3rem;
-}  
+	.paper-title-simple {
+	  font-weight: bold;
+	  margin-bottom: 0.3rem;
+	}
+	
+	.paper-authors-simple {
+	  font-style: italic;
+	  margin-bottom: 0.3rem;
+	}
+	
+	.paper-journal-simple {
+	  margin-bottom: 0.3rem;
+	}
+	
+	.paper-status-simple {
+	  font-style: italic;
+	  margin-bottom: 0.3rem;
+	}  
+	  .paper-item-simple p {
+	  margin-left: 3rem;
+	}
 
     /* ===== RESPONSIVE DESIGN ===== */
     @media (max-width: 768px) {
@@ -933,12 +936,12 @@
     <h2>Research</h2>
     
     <!-- Publication Section -->
+<!-- Publication Section -->
 <h3>Publication</h3>
 <div class="paper-item-simple">
   <div class="paper-title-simple">"Noncustodial parents, instrumental networks, and child support compliance"</div>
   <div class="paper-authors-simple">with Quentin H. Riser, Daniel R. Meyer, and Lawrence M. Berger</div>
-  <div class="paper-journal-simple">Social Science Research, Volume 110, February 2023, 102850</div>
-  <a href="https://www.sciencedirect.com/science/article/abs/pii/S0049089X23000054" target="_blank">Link</a>
+  <div class="paper-journal-simple">Social Science Research, Volume 110, February 2023, 102850 | <a href="https://www.sciencedirect.com/science/article/abs/pii/S0049089X23000054" target="_blank">Link</a></div>
 </div>
 
 <!-- Job Market Paper Section -->
@@ -954,16 +957,13 @@
 
 <div class="paper-item-simple">
   <div class="paper-title-simple">"Ride-sharing and Crime: Evidence from U.S Cities"</div>
-  <div class="paper-authors-simple">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a></div>
-  <div class="paper-status-simple">R&R Transportation Research Interdisciplinary Perspectives</div>
-  <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5115271" target="_blank">Link</a>
+  <div class="paper-authors-simple">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a> (R&R Transportation Research Interdisciplinary Perspectives) | <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5115271" target="_blank">Link</a></div>
   <p><strong>Abstract:</strong> This paper investigates the causal impact of ride-sharing services (Uber and Lyft) on urban crime rates in major U.S. cities. Using the staggered rollout of ride-sharing services across cities, we employ a difference-in-differences framework to estimate effects on various crime categories. Our findings suggest that ride-sharing availability reduces certain types of crime, potentially through improved transportation options and reduced alcohol-related incidents, while having differential effects across neighborhoods.</p>
 </div>
 
 <div class="paper-item-simple">
   <div class="paper-title-simple">"Fueling or Failing: Evidence from Oil Price Decline"</div>
-  <div class="paper-authors-simple">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a></div>
-  <div class="paper-status-simple">Manuscript Submitted to Education Economics</div>
+  <div class="paper-authors-simple">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a> (Manuscript Submitted to Education Economics)</div>
   <p><strong>Abstract:</strong> This study examines the economic consequences of oil price declines using difference-in-differences identification strategy. Educational outcomes are measured using data from the Stanford Education Data Archive (SEDA). We estimate that the shock increased Mathematics and English Language Arts (ELA) scores by approximately 0.02 to 0.06 standard deviations. These gains are concentrated among specific subgroups, including Hispanic, female, Asian, and economically disadvantaged (ECD) students.</p>
 </div>
 
@@ -980,8 +980,7 @@
 
 <div class="paper-item-simple">
   <div class="paper-title-simple">"Medicaid Expansion and Crime: Evidence from U.S Cities"</div>
-  <div class="paper-authors-simple">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a></div>
-  <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5115271" target="_blank">Link</a>
+  <div class="paper-authors-simple">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a> | <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5115271" target="_blank">Link</a></div>
   <p><strong>Abstract:</strong> Crime rates in the U.S. have fallen over the past two decades, though periods like the pandemic saw sharp increases. This paper examines how the 2014 Medicaid expansion influenced crime in major cities, using daily crime data from the 21 largest U.S. cities. We provide the first causal analysis linking Medicaid expansion to urban crime trends, exploiting variation in state adoption timing to identify effects on violent and property crime rates.</p>
 </div>
 
@@ -990,8 +989,7 @@
 
 <div class="paper-item-simple">
   <div class="paper-title-simple">"Causal Effects of CTE Pathways and Career Clusters on Secondary and Postsecondary Outcomes"</div>
-  <div class="paper-authors-simple">with <a href="https://scholar.google.com/citations?user=x1gyyigAAAAJ&hl=en" target="_blank">Kenneth Shores</a> and <a href="https://www.education.udel.edu/grad-student/jesse-eze/" target="_blank">Jesse Eze</a></div>
-  <a href="https://eric.ed.gov/?q=cluster&pg=7&id=ED663020" target="_blank">Abstract</a>
+  <div class="paper-authors-simple">with <a href="https://scholar.google.com/citations?user=x1gyyigAAAAJ&hl=en" target="_blank">Kenneth Shores</a> and <a href="https://www.education.udel.edu/grad-student/jesse-eze/" target="_blank">Jesse Eze</a> | <a href="https://eric.ed.gov/?q=cluster&pg=7&id=ED663020" target="_blank">Abstract</a></div>
 </div>
 
 <div class="paper-item-simple">
