--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@
 
       <!-- Right side: Main content -->
       <div style="position: relative; padding-top: 50px;">
-	  <div style="position: absolute; top: 0; right: 0; background-color: #2c5aa0; color: white; padding: 8px 16px; border-radius: 6px; font-weight: bold; font-size: 0.9rem;">
+	  <div style="position: absolute; top: 0; right: 0; background-color: #90EE90; color: white; padding: 8px 16px; border-radius: 6px; font-weight: bold; font-size: 0.9rem;">
 	    Job Market Candidate 2025-2026
 	  </div>
 	  <p>Welcome to my website!</p>
