--- a/index.html
+++ b/index.html
@@ -912,11 +912,18 @@
 
       <!-- Right side: Main content -->
       <div style="position: relative; padding-top: 50px;">
-	  <div style="position: absolute; top: 0; right: 0; background-color: #90EE90; color: white; padding: 8px 16px; border-radius: 6px; font-weight: bold; font-size: 0.9rem;">
-	    Job Market Candidate 2025-2026
+	<div style="position: absolute; top: 0; right: 0; background-color: #D4EDDA; color: black; padding: 8px 16px; border-radius: 6px; font-weight: bold; font-size: 0.9rem;">	    
+	Job Market Candidate 2025-2026
 	  </div>
 	  <p>Welcome to my website!</p>
 	  <p>I am an Economics PhD candidate at the University of Delaware. My research uses causal inference methods to study labor and health economics, focusing on policy impacts on communities.</p>
+	  <p> </p>
+
+			  <div class="paper-item-simple">
+			  <div class="paper-title-simple">"The 1973 Oil Embargo and Infant Health Outcomes: Evidence from a Macroeconomic Shock"</div>
+			  <p><strong>Abstract:</strong> An extensive literature documents that economic shocks affect health outcomes, but mechanisms and distributional effects remain unclear. I study how energy shocks affect infant health using 1968-1979 Vital Statistics data. With an event-study framework that accounts for state-specific pre-trends, I find that states with higher oil dependence have birthweight increases following the 1973 oil embargo. Gains are larger for less-educated, relatively younger, and Black mothers at 2.3-3.5 grams. These improvements result from increased prenatal care use, reduced air pollution, and shifts in maternal composition.</p>
+			 </div>
+		  
 	  <p> </p>
 	  <p>Outside of my studies, I love cooking tasty meals, singing with passion, and taking long refreshing walks.</p>
 	</div>
