--- a/index.html
+++ b/index.html
@@ -918,7 +918,7 @@
 	  <p>Welcome to my website!</p>
 	  <p>I am an Economics PhD candidate at the University of Delaware. My research uses causal inference methods to study labor and health economics, focusing on policy impacts on communities.</p>
 	  <p> </p>
-
+	          <p><strong>Job Market Paper</strong></p>
 			  <div class="paper-item-simple">
 			  <div class="paper-title-simple">"The 1973 Oil Embargo and Infant Health Outcomes: Evidence from a Macroeconomic Shock"</div>
 			  <p><strong>Abstract:</strong> An extensive literature documents that economic shocks affect health outcomes, but mechanisms and distributional effects remain unclear. I study how energy shocks affect infant health using 1968-1979 Vital Statistics data. With an event-study framework that accounts for state-specific pre-trends, I find that states with higher oil dependence have birthweight increases following the 1973 oil embargo. Gains are larger for less-educated, relatively younger, and Black mothers at 2.3-3.5 grams. These improvements result from increased prenatal care use, reduced air pollution, and shifts in maternal composition.</p>
