--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
       align-items: center;
       justify-content: space-between;
       max-width: var(--content-width);
-      margin: 50px auto 0;
-      padding: 2rem 1rem 1.5rem;
+      margin: 20px auto 0;
+      padding: 2rem 1rem 1.5rem; /* Reduced from 50px to 20px */
       border-bottom: 1px solid var(--secondary-color);
     }
 
