--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       align-items: center;
       justify-content: space-between;
       max-width: var(--content-width);
-      margin: 10px auto 0; /* Reduced from 50px to 10px */
+      margin: 05px auto 0; /* Reduced from 50px to 10px to 05px */
       padding: 2rem 1rem 1.5rem; 
       border-bottom: 1px solid var(--secondary-color);
     }
@@ -865,7 +865,6 @@
 <header class="header-container">
   <div class="header-name">Vikrant V. Kamble</div>
   <div class="header-info">
-    <div>Economics PhD Candidate</div>
     <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a>
     <a href="https://www.dropbox.com/scl/fi/z7xxfbg2sr6u5vmp9bh7d/Vikrant_V_Kamble.pdf?rlkey=q54xgy7ks4i1b9bhu857jdg10&st=8iag5bac&dl=0" target="_blank">CV</a>
   </div>
