--- a/index.html
+++ b/index.html
@@ -1029,7 +1029,7 @@
             <div class="carousel-slides">
               <!-- Slide 1 -->
               <div class="carousel-slide active">
-                <img src="https://www.dropbox.com/scl/fi/kx7tpp6q5r8im71t9cjll/bootstrap_ci_comparision.pdf?rlkey=3wnubnftdq48e6y134fx6pl8b&st=194bhjno&dl=1" alt="Figure 1">
+                <img src="https://www.dropbox.com/scl/fi/81kc3tx07ydp6bqfah24r/bootstrap_ci_comparision.png?rlkey=kbgv6dwmmxha4r36v9elf8x21&st=0wqhk7ho&dl=1" alt="Figure 1">
                 <div class="figure-caption">Figure 1: Improvement in infant weight </div>
               </div>
 
