--- a/index.html
+++ b/index.html
@@ -180,6 +180,12 @@
       min-height: calc(100vh - var(--header-height) - 60px);
     }
     
+    /* Reduced left and right side margins for Home tab only */
+    #home.section {
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+    
     section {
       margin-bottom: 2rem;
     }
