--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
       min-height: calc(100vh - var(--header-height) - 60px);
     }
     
-    /* Reduced left and right side margins for Home tab only */
+    /* Zero left and right side margins for Home tab only */
     #home.section {
-      padding-left: 5px;
-      padding-right: 5px;
+      padding-left: 0;
+      padding-right: 0;
     }
     
     section {
