--- a/index.html
+++ b/index.html
@@ -184,6 +184,8 @@
     #home.section {
       padding-left: 0;
       padding-right: 0;
+      margin-left: -0.75rem;
+      margin-right: -0.75rem;
     }
     
     section {
