--- a/index.html
+++ b/index.html
@@ -1087,7 +1087,7 @@
 
 <div class="paper-item-simple">
   <div class="paper-title-simple">"Medicaid Expansion and Crime: Evidence from U.S Cities"</div>
-  <div class="paper-authors-simple">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a> | <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5115271" target="_blank">Link</a></div>
+  <div class="paper-authors-simple">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a> (Manuscript Submitted to International Journal of Law, Crime and Justice) | <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5115271" target="_blank">Link</a></div>
   <p><strong>Abstract:</strong> Crime rates in the U.S. have fallen over the past two decades, though periods like the pandemic saw sharp increases. This paper examines how the 2014 Medicaid expansion influenced crime in major cities, using daily crime data from the 21 largest U.S. cities. We provide the first causal analysis linking Medicaid expansion to urban crime trends, exploiting variation in state adoption timing to identify effects on violent and property crime rates.</p>
 </div>
 
