--- a/index.html
+++ b/index.html
@@ -1064,7 +1064,7 @@
 
 <div class="paper-item-simple">
   <div class="paper-title-simple">"Ride-sharing and Crime: Evidence from U.S Cities"</div>
-  <div class="paper-authors-simple">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a> (<strong>Accepted</strong>, Transportation Research Interdisciplinary Perspectives) | <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5115271" target="_blank">Link</a></div>
+  <div class="paper-authors-simple">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a> (<strong>Accepted</strong>, Transportation Research Interdisciplinary Perspectives)</div>
   <p><strong>Abstract:</strong> This paper investigates the causal impact of ride-sharing services (Uber and Lyft) on urban crime rates in major U.S. cities. Using the staggered rollout of ride-sharing services across cities, we employ a difference-in-differences framework to estimate effects on various crime categories. Our findings suggest that ride-sharing availability reduces certain types of crime, potentially through improved transportation options and reduced alcohol-related incidents, while having differential effects across neighborhoods.</p>
 </div>
 
