--- a/index.html
+++ b/index.html
@@ -1106,7 +1106,8 @@
 
 <div class="paper-item-simple">
   <div class="paper-title-simple">"Marching Through Time: The Enduring Effects of Military Settlements"</div>
-  <div class="paper-authors-simple">with Sarah Shaukat and Attique Ur Rehman</div>
+  <div class="paper-authors-simple">with <a href="https://www.sarahshaukat.com/">Sarah Shaukat</a> and <a href="https://sites.google.com/view/attique-ur-rehman">Attique Ur Rehman</a>
+</div>
 </div>
 </section>
   
