--- a/index.html
+++ b/index.html
@@ -1115,7 +1115,7 @@
   <section id="teaching" class="section">
     <h2>Teaching Experience</h2>
     
-    <h3>Instructor</h3>
+    <h3>Instructor of Record</h3>
  	<ul>
       <li>ECON101: Introduction to Microeconomics <a href="Complete_Evaluations_Winter2025.pdf" target="_blank">(Course evaluations)</a>
         <p class="indent"> Winter 2025, Fall 2025 (86 students) | Textbook Used: Principles of Microconomics, 2nd edition by Stevenson and Wolfers</p>
