--- a/index.html
+++ b/index.html
@@ -1038,9 +1038,9 @@
     <div class="carousel-slides">
       <!-- Slide 1 -->
       <div class="carousel-slide active">
-        <img src="https://www.dropbox.com/scl/fi/81kc3tx07ydp6bqfah24r/bootstrap_ci_comparision.png" alt="Figure 1">
-        <div class="figure-caption">Figure 1: Birthweight</div>
-      </div>
+  <img src="https://www.dropbox.com/scl/fi/81kc3tx07ydp6bqfah24r/bootstrap_ci_comparision.png?raw=1" alt="Figure 1">
+	  <div class="figure-caption">Figure 1: Birthweight</div>
+	</div>
 
       <!-- Slide 2 -->
       <div class="carousel-slide">
