--- a/index.html
+++ b/index.html
@@ -1037,35 +1037,34 @@
   <div class="carousel-wrapper">
     <div class="carousel-slides">
       <!-- Slide 1 -->
-      <div class="carousel-slide active">
-  <img src="https://www.dropbox.com/scl/fi/81kc3tx07ydp6bqfah24r/bootstrap_ci_comparision.png?raw=1" alt="Figure 1">
-	  <div class="figure-caption">Figure 1: Birthweight</div>
-	</div>
+<div class="carousel-slide active">
+  <img src="https://www.dropbox.com/scl/fi/81kc3tx07ydp6bqfah24r/bootstrap_ci_comparision.png?rlkey=kbgv6dwmmxha4r36v9elf8x21&raw=1" alt="Figure 1">
+  <div class="figure-caption">Figure 1: Birthweight</div>
+</div>
 
-      <!-- Slide 2 -->
-      <div class="carousel-slide">
-        <img src="https://www.dropbox.com/scl/fi/rel6y3eeg2wxjdccaffll/eq2_birthweight.png" alt="Figure 2">
-        <div class="figure-caption">Figure 2: Birthweight</div>
-      </div>
+<!-- Slide 2 -->
+<div class="carousel-slide">
+  <img src="https://www.dropbox.com/scl/fi/rel6y3eeg2wxjdccaffll/eq2_birthweight.png?rlkey=cxl5ytgbrvo7t9wxl0kvjco1s&raw=1" alt="Figure 2">
+  <div class="figure-caption">Figure 2: Birthweight</div>
+</div>
 
-      <!-- Slide 3 -->
-      <div class="carousel-slide">
-        <img src="https://www.dropbox.com/scl/fi/ap8ffwsolcknoy10civpq/eq2_dgestat.png" alt="Figure 3">
-        <div class="figure-caption">Figure 3: Gestational age</div>
-      </div>
+<!-- Slide 3 -->
+<div class="carousel-slide">
+  <img src="https://www.dropbox.com/scl/fi/ap8ffwsolcknoy10civpq/eq2_dgestat.png?rlkey=r3acly54ihktlc9pb6rccuzuf&raw=1" alt="Figure 3">
+  <div class="figure-caption">Figure 3: Gestational age</div>
+</div>
 
-      <!-- Slide 4 -->
-      <div class="carousel-slide">
-        <img src="https://www.dropbox.com/scl/fi/jxaf0iqxw7n7nc8rgc5q3/eq2_lowbw.png" alt="Figure 4">
-        <div class="figure-caption">Figure 4: Low Birth Weight</div>
-      </div>
+<!-- Slide 4 -->
+<div class="carousel-slide">
+  <img src="https://www.dropbox.com/scl/fi/jxaf0iqxw7n7nc8rgc5q3/eq2_lowbw.png?rlkey=dxa1sb0mlnhawevtxpho9k4ds&raw=1" alt="Figure 4">
+  <div class="figure-caption">Figure 4: Low Birth Weight</div>
+</div>
 
-      <!-- Slide 5 -->
-      <div class="carousel-slide">
-        <img src="https://www.dropbox.com/scl/fi/rsfzy55hgsld2mytoc2ga/eq2_preterm.png" alt="Figure 5">
-        <div class="figure-caption">Figure 5: Preterm</div>
-      </div>
-    </div>
+<!-- Slide 5 -->
+<div class="carousel-slide">
+  <img src="https://www.dropbox.com/scl/fi/rsfzy55hgsld2mytoc2ga/eq2_preterm.png?rlkey=by1cz7ijo7kvxjpf6j7k66twa&raw=1" alt="Figure 5">
+  <div class="figure-caption">Figure 5: Preterm</div>
+</div>
 
     <!-- Navigation Arrows -->
     <div class="arrow arrow-left" onclick="changeSlide(-1)"></div>
