--- a/index.html
+++ b/index.html
@@ -1092,7 +1092,7 @@
     
     <!-- Publication Section -->
 <!-- Publication Section -->
-<h3>Publication</h3>
+<h3>Peer-Reviewed Publications</h3>
 <div class="paper-item-simple">
   <div class="paper-title-simple">"Noncustodial parents, instrumental networks, and child support compliance"</div>
   <div class="paper-authors-simple">with Quentin H. Riser, Daniel R. Meyer, and Lawrence M. Berger</div>
