--- a/index.html
+++ b/index.html
@@ -1154,8 +1154,7 @@
 
 <div class="paper-item-simple">
   <div class="paper-title-simple">"Marching Through Time: The Enduring Effects of Military Settlements"</div>
-  <div class="paper-authors-simple">with <a href="https://www.sarahshaukat.com/">Sarah Shaukat</a> and <a href="https://sites.google.com/view/attique-ur-rehman">Attique Ur Rehman</a>
-</div>
+<div class="paper-authors-simple">with <a href="https://www.sarahshaukat.com/" target="_blank" rel="noopener noreferrer">Sarah Shaukat</a> and <a href="https://sites.google.com/view/attique-ur-rehman" target="_blank" rel="noopener noreferrer">Attique Ur Rehman</a></div>
 </div>
 </section>
   
