--- a/index.html
+++ b/index.html
@@ -1093,6 +1093,12 @@
     <!-- Publication Section -->
 <!-- Publication Section -->
 <h3>Peer-Reviewed Publications</h3>
+
+<div class="paper-item-simple">
+  <div class="paper-title-simple">"Ride-sharing and Crime: Evidence from U.S Cities"</div>
+  <div class="paper-authors-simple">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a> (<strong>forthcoming</strong>, Transportation Research Interdisciplinary Perspectives)</div>
+</div>
+	  
 <div class="paper-item-simple">
   <div class="paper-title-simple">"Noncustodial parents, instrumental networks, and child support compliance"</div>
   <div class="paper-authors-simple">with Quentin H. Riser, Daniel R. Meyer, and Lawrence M. Berger</div>
@@ -1109,12 +1115,6 @@
 
 <!-- Working Papers Section -->
 <h3>Working Papers</h3>
-
-<div class="paper-item-simple">
-  <div class="paper-title-simple">"Ride-sharing and Crime: Evidence from U.S Cities"</div>
-  <div class="paper-authors-simple">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a> (<strong>Accepted</strong>, Transportation Research Interdisciplinary Perspectives)</div>
-  <p><strong>Abstract:</strong> This paper investigates the causal impact of ride-sharing services (Uber and Lyft) on urban crime rates in major U.S. cities. Using the staggered rollout of ride-sharing services across cities, we employ a difference-in-differences framework to estimate effects on various crime categories. Our findings suggest that ride-sharing availability reduces certain types of crime, potentially through improved transportation options and reduced alcohol-related incidents, while having differential effects across neighborhoods.</p>
-</div>
 
 <div class="paper-item-simple">
   <div class="paper-title-simple">"Fueling or Failing: Evidence from Oil Price Decline"</div>
