--- a/index.html
+++ b/index.html
@@ -1096,7 +1096,8 @@
 
 <div class="paper-item-simple">
   <div class="paper-title-simple">"Ride-sharing and Crime: Evidence from U.S Cities"</div>
-  <div class="paper-authors-simple">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a> (<strong>forthcoming</strong>, Transportation Research Interdisciplinary Perspectives)</div>
+  <div class="paper-authors-simple">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a></div>
+  <div class="paper-authors-simple">Transportation Research Interdisciplinary Perspectives 34, 101707 | <a href="https://www.sciencedirect.com/science/article/pii/S2590198225003860" target="_blank">Link</a></div>
 </div>
 	  
 <div class="paper-item-simple">
@@ -1118,7 +1119,7 @@
 
 <div class="paper-item-simple">
   <div class="paper-title-simple">"Fueling or Failing: Evidence from Oil Price Decline"</div>
-  <div class="paper-authors-simple">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a> (Manuscript Submitted to Education Economics)</div>
+  <div class="paper-authors-simple">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a> (Under Review)</div>
   <p><strong>Abstract:</strong> This study examines the economic consequences of oil price declines using difference-in-differences identification strategy. Educational outcomes are measured using data from the Stanford Education Data Archive (SEDA). We estimate that the shock increased Mathematics and English Language Arts (ELA) scores by approximately 0.02 to 0.06 standard deviations. These gains are concentrated among specific subgroups, including Hispanic, female, Asian, and economically disadvantaged (ECD) students.</p>
 </div>
 
@@ -1135,7 +1136,7 @@
 
 <div class="paper-item-simple">
   <div class="paper-title-simple">"Medicaid Expansion and Crime: Evidence from U.S Cities"</div>
-  <div class="paper-authors-simple">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a> (Manuscript Submitted to International Journal of Law, Crime and Justice) | <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5115271" target="_blank">Link</a></div>
+  <div class="paper-authors-simple">with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a> (Under Review) | <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5115271" target="_blank">Link</a></div>
   <p><strong>Abstract:</strong> Crime rates in the U.S. have fallen over the past two decades, though periods like the pandemic saw sharp increases. This paper examines how the 2014 Medicaid expansion influenced crime in major cities, using daily crime data from the 21 largest U.S. cities. We provide the first causal analysis linking Medicaid expansion to urban crime trends, exploiting variation in state adoption timing to identify effects on violent and property crime rates.</p>
 </div>
 
