--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
   <div class="header-name">Vikrant V. Kamble</div>
   <div class="header-info">
     <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a>
-    <a href="https://www.dropbox.com/scl/fi/z7xxfbg2sr6u5vmp9bh7d/Vikrant_V_Kamble.pdf?rlkey=q54xgy7ks4i1b9bhu857jdg10&st=8iag5bac&dl=0" target="_blank">CV</a>
+    <a href="https://www.dropbox.com/scl/fi/9v37h8k81dgnn651czhvv/CV_Vikrant_V_Kamble.pdf?rlkey=7uexiqrzcibpcqv6jo4r01hus&dl=0" target="_blank">CV</a>
   </div>
 </header>
 
