--- a/index.html
+++ b/index.html
@@ -1095,26 +1095,27 @@
 <h3>Peer-Reviewed Publications</h3>
 
 <div class="paper-item-simple">
-  <div class="paper-title-simple">"Ride-sharing and Crime: Evidence from U.S. Cities"</div>
+  <div class="paper-title-simple">1. <strong>"Ride-sharing and Crime: Evidence from U.S. Cities"</strong></div>
   <div class="paper-authors-simple">
     with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a>
   </div>
   <div class="paper-journal-simple">
-    Transportation Research Interdisciplinary Perspectives, Volume 34, 2025, 101707 |
+    <em>Transportation Research Interdisciplinary Perspectives</em>, Volume 34, 2025, 101707 |
     <a href="https://www.sciencedirect.com/science/article/pii/S2590198225003860" target="_blank">Link</a>
   </div>
 </div>
 
 <div class="paper-item-simple">
-  <div class="paper-title-simple">"Noncustodial Parents, Instrumental Networks, and Child Support Compliance"</div>
+  <div class="paper-title-simple">2. <strong>"Noncustodial Parents, Instrumental Networks, and Child Support Compliance"</strong></div>
   <div class="paper-authors-simple">
     with Quentin H. Riser, Daniel R. Meyer, and Lawrence M. Berger
   </div>
   <div class="paper-journal-simple">
-    Social Science Research, Volume 110, February 2023, 102850 |
+    <em>Social Science Research</em>, Volume 110, February 2023, 102850 |
     <a href="https://www.sciencedirect.com/science/article/abs/pii/S0049089X23000054" target="_blank">Link</a>
   </div>
 </div>
+
 
 
 <!-- Job Market Paper Section -->
