--- a/index.html
+++ b/index.html
@@ -1100,10 +1100,12 @@
     with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a>
   </div>
   <div class="paper-journal-simple">
-    <em>Transportation Research Interdisciplinary Perspectives</em>, Volume 34, 2025, 101707 |
+    Transportation Research Interdisciplinary Perspectives, Volume 34, 2025, 101707 |
     <a href="https://www.sciencedirect.com/science/article/pii/S2590198225003860" target="_blank">Link</a>
   </div>
 </div>
+
+<br><br>
 
 <div class="paper-item-simple">
   <div class="paper-title-simple">2. <strong>"Noncustodial Parents, Instrumental Networks, and Child Support Compliance"</strong></div>
@@ -1111,10 +1113,11 @@
     with Quentin H. Riser, Daniel R. Meyer, and Lawrence M. Berger
   </div>
   <div class="paper-journal-simple">
-    <em>Social Science Research</em>, Volume 110, February 2023, 102850 |
+    Social Science Research, Volume 110, February 2023, 102850 |
     <a href="https://www.sciencedirect.com/science/article/abs/pii/S0049089X23000054" target="_blank">Link</a>
   </div>
 </div>
+
 
 
 
