--- a/index.html
+++ b/index.html
@@ -837,6 +837,37 @@
       }
     }
 
+	 /* ======	PUBLICATION NUMBERING ======*/ 
+	  /* container that holds all papers */
+.publications-list {
+  counter-reset: pub;            /* start numbering at 0 */
+  padding-left: 0;              /* we control spacing ourselves */
+  margin: 0;
+}
+
+/* each paper block increments the counter */
+.publications-list .paper-item-simple {
+  counter-increment: pub;       /* increase number for each item */
+  margin-bottom: 1rem;          /* space between items */
+  padding-left: 2.4rem;         /* room for the number on the left */
+  position: relative;
+}
+
+/* display the number on the left */
+.publications-list .paper-item-simple::before {
+  content: counter(pub) ".";    /* the number, e.g. 1. */
+  position: absolute;
+  left: 0;
+  top: 0;
+  font-weight: 700;
+  min-width: 2rem;
+  text-align: left;
+}
+
+/* small niceties for your existing classes */
+.paper-title-simple { font-weight: 700; display:block; }
+.paper-authors-simple, .paper-journal-simple { display:block; margin-top: 0.18rem; }
+
     /* ===== RESPONSIVE DESIGN ===== */
     @media (max-width: 768px) {
       :root {
@@ -1094,31 +1125,29 @@
 <!-- Publication Section -->
 <h3>Peer-Reviewed Publications</h3>
 
-<div class="paper-item-simple">
-  <div class="paper-title-simple">1. <strong>"Ride-sharing and Crime: Evidence from U.S. Cities"</strong></div>
-  <div class="paper-authors-simple">
-    with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a>
+<div class="publications-list">
+  <div class="paper-item-simple">
+    <div class="paper-title-simple">"Ride-sharing and Crime: Evidence from U.S. Cities"</div>
+    <div class="paper-authors-simple">
+      with <a href="https://sites.google.com/udel.edu/usmantaj" target="_blank">Muhammad Usman Taj</a>
+    </div>
+    <div class="paper-journal-simple">
+      Transportation Research Interdisciplinary Perspectives, Volume 34, 2025, 101707 |
+      <a href="https://www.sciencedirect.com/science/article/pii/S2590198225003860" target="_blank">Link</a>
+    </div>
   </div>
-  <div class="paper-journal-simple">
-    Transportation Research Interdisciplinary Perspectives, Volume 34, 2025, 101707 |
-    <a href="https://www.sciencedirect.com/science/article/pii/S2590198225003860" target="_blank">Link</a>
+
+  <div class="paper-item-simple">
+    <div class="paper-title-simple">"Noncustodial Parents, Instrumental Networks, and Child Support Compliance"</div>
+    <div class="paper-authors-simple">
+      with Quentin H. Riser, Daniel R. Meyer, and Lawrence M. Berger
+    </div>
+    <div class="paper-journal-simple">
+      Social Science Research, Volume 110, February 2023, 102850 |
+      <a href="https://www.sciencedirect.com/science/article/abs/pii/S0049089X23000054" target="_blank">Link</a>
+    </div>
   </div>
 </div>
-
-<br><br>
-
-<div class="paper-item-simple">
-  <div class="paper-title-simple">2. <strong>"Noncustodial Parents, Instrumental Networks, and Child Support Compliance"</strong></div>
-  <div class="paper-authors-simple">
-    with Quentin H. Riser, Daniel R. Meyer, and Lawrence M. Berger
-  </div>
-  <div class="paper-journal-simple">
-    Social Science Research, Volume 110, February 2023, 102850 |
-    <a href="https://www.sciencedirect.com/science/article/abs/pii/S0049089X23000054" target="_blank">Link</a>
-  </div>
-</div>
-
-
 
 
 <!-- Job Market Paper Section -->
